--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,4 +12,5 @@ kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", ve
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+publish = { id = "com.vanniktech.maven.publish", version = "0.27.0" }
 spotless = { id = "com.diffplug.spotless", version = "6.25.0" }
